Update website title to IMDb Top 250 Movie Generator

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Movie Generator</title>
+    <title>IMDb Top 250 Movie Generator</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Random Movie Generator</h1>
+        <h1>IMDb Top 250 Movie Generator</h1>
         <button id="generateBtn">Generate Random Movie</button>
         
         <div id="loading" class="loading">
