--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             margin: 20px auto;
             padding: 15px 30px;
             font-size: 18px;
-            background-color: #3498db;
-            color: white;
+            background-color: #f5c518; /* IMDb yellow */
+            color: #000000; /* Change text to black for better contrast */
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -53,7 +53,7 @@
         }
 
         button:hover {
-            background-color: #2980b9;
+            background-color: #e3b616; /* Slightly darker yellow on hover */
         }
 
         .label {
