--- a/index.html
+++ b/index.html
@@ -4,26 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMDb Top 250 Movie Generator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Montserrat', sans-serif; /* More modern font */
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
             background-color: #f0f0f0;
             color: #333;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .container {
             background-color: white;
-            padding: 30px;
+            padding: 40px;
             border-radius: 10px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            width: 100%;
+            max-width: 600px;
         }
 
         h1 {
             text-align: center;
             color: #2c3e50;
+            font-family: 'Playfair Display', serif; /* Fancy font for heading */
+            font-size: 2.5rem;
+            margin-bottom: 30px;
         }
 
         .movie-card {
